--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <hr/>
+    <header></header>
+    <main>
+        
+    </main>
+    <footer>
+        <h1>Hola mundo</h1>
+    </footer>
 </body>
 </html>
